Only create new tabs for double clicks with the primary button

BUG: 432632